# FieldNBalance

./: .editorconfig  .gitignore  BalancePairs.xlsx  Brians.xlsm  Darians.xlsm  Geralds.xlsm  NBalanceGraphToolTips.xlsx  Prototype_V2.1.xlsm  Prototype_V3.2.xlsm  Prototype_V3.3.xlsm  Prototype_V3.4.xlsm  Prototype_V3.5.xlsm  README.md  SVSModel.sln  Test.xlsx  Test2.xlsx  Wallies.xlsm  index.html  pyproject.toml  requirements.txt
.github/workflows/: ubuntodotnet.yml  unit-tests.yaml  validation-tests.yaml
SVSModel/: ClassDiagram1.cd  ModelInterface.cs  README.md  SVSModel.csproj  Simulation.cs  nuget.config
SVSModel.Excel/: ExcelInterface.cs  SVSModel.Excel.csproj
SVSModel.Excel/Properties/: Resources.Designer.cs  launchSettings.json
SVSModel.Excel/TestingFiles/: Brians 3.6.xlsm  Brians.xlsm  CompanyA3.8.xlsm  Darians 3.6.xlsm  Darians.xlsm  Geralds 3.6.xlsm  Geralds.xlsm  Jasons 3.6.xlsm  Jasons.xlsm  LincolnUniWheat_V3.4.xlsm  Obama 3.6.xlsm  Obama.xlsm  PotatoShort.xlsm  Prototype 3.6.xlsm  Prototype.xlsm  Prototype3.7.xlsm  Prototype_V1.0.xlsm  Prototype_V2.0.xlsm  Prototype_V3.3.xlsm  Prototype_V3.4.xlsm  Prototype_V3.5.xlsm  Prototype_V3.xlsm  ResidueExp.xlsx  SVS Tool Level 1 Concept Demonstrator(abhs)3.xlsm  SoilTestTest.xlsx  Wallies 3.6.xlsm  Wallies.xlsm
SVSModel.Tests/: SVSModel.Tests.csproj  SVSModelTest.cs  UnitTest1.cs
TestComponents/: Test.cs  TestComponents.csproj  TestConfig.cs  TestModel.sln
TestConsole/: RunTests.cs  TestsConsole.csproj
TestGraphs/: TestGraphs.pyproj  report.ipynb  report.py
scripts/: env_export.sh
(+392 files in other folders)
