[tool.poetry]
name = "fieldnbalance"
version = "0.1.0"
description = ""
authors = ["JBris <James.Bristow@plantandfood.co.nz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
aspose-words = "^24.3.0"
numpy = "^1.26.4"
matplotlib = "^3.8.3"
pandas = "^2.2.1"
contourpy = "^1.2.0"
altgraph = "^0.17.4"
cycler = "^0.12.1"
et-xmlfile = "^1.1.0"
fonttools = "^4.50.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
